--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
                         <img src="assets/images/bn-122x122.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Berennetwork</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="home.html">Berennetwork</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="cid-rgWlx903rt mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-rgWlx903rt mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
