--- a/nieuws.html
+++ b/nieuws.html
@@ -44,7 +44,7 @@
                         <img src="assets/images/bn-122x122.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Berennetwork</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="home.html">Berennetwork</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="testimonials1 cid-rh0jBW4H5p" id="testimonials1-o">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="testimonials1 cid-rh0jBW4H5p" id="testimonials1-o">
 
     
 
