create github pages

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="home.html"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-black display-4" href="start.html"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>
                         Home</a>
                 </li>
                 <li class="nav-item">
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section form1 cid-rgWvXaQHEJ" id="form1-f">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="mbr-section form1 cid-rgWvXaQHEJ" id="form1-f">
 
     
 
@@ -81,7 +81,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Bedankt om het Conact formulier in te vullen u zult ZSM van ons horen!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K4q6dG4b8LGRHVSCl477a/LPfowho/7U9vb9gEa/yQYQk0cLCXbqYhpmdjvo3DhBoRsvjrZwFjMvW65cyc4AbnmsRdgrLiVkmBy5Z9H+v0NpAvF8AL92xCUxQV1lsveD">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aYPFwIGRcyTcLNLSS6SPppFK0pZbJd/ZxOUzWY2yiQQiCmyMiGHMlP7ynvX1dnM/4rGlaqWY2A41fogIcR7HSMPfwikDwPPkqzPeTvZoipPuYSjObn6J2isSOEStSLAm">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
