--- a/forum.html
+++ b/forum.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="home.html"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-black display-4" href="start.html"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>
                         Home</a>
                 </li>
                 <li class="nav-item">
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="" class="cid-rgWnPgTn5D" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section once="" class="cid-rgWnPgTn5D" id="footer6-u">
 
     
 
