--- a/solliciteren.html
+++ b/solliciteren.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="home.html"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-black display-4" href="start.html"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>
                         Home</a>
                 </li>
                 <li class="nav-item">
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="mbr-section form1 cid-rgWvaGpbFZ" id="form1-e">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section form1 cid-rgWvaGpbFZ" id="form1-e">
 
     
 
@@ -79,7 +79,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Bedankt voor het invullen van de Solli u zult ZSM horen van ons!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hod7Zsz/9F+XciER0iFqmlvZwPqnRTnFKs2xnPscLuIMRTSW9VWLyAnaIRCjTzuO5L3rhOQRAgAjDPH9a2z4xrKZQRiwPf94aUarXqOtj0ZYf5QBxLUiY84yay0E3tvH">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v3/nVvz/LXcrC2gBgUt19WNoodvD+XyxflEh5M2W53UntZQbGRARFCN1KucoNEUZkr31WC/yybZ/GiSi2So5kg154tnxneVauOWNkOsH57ZoF8W+OqlJkCS0sUo62Ojn">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
